update a few chapters